# fastlog

./: AUTHORS  CMakeLists.txt  HISTORY  README.md  TODO  clean  compile  fdecoder.sh
decoder/: CMakeLists.txt  fastlog_decode.h  fastlog_decode_cli.c  fastlog_decode_cli.h  fastlog_decode_file.c  fastlog_decode_list.c  fastlog_decode_main.c  fastlog_decode_output_filter.c  fastlog_decode_output_json.c  fastlog_decode_output_txt.c  fastlog_decode_output_xml.c  fastlog_decode_rb.c  fastlog_decode_reprintf.c
decoder/bitmask/: bitmask.c  bitmask.h
decoder/hiredis/: sds.c  sds.h
decoder/linenoise/: linenoise.c  linenoise.h
decoder/ui/: progress.c  progress.h
include/: fastlog.h  fastlog_internal.h  fastlog_staging_buffer.h  fastlog_utils.h
src/: fastlog.c  fastlog_bitmask.c  fastlog_bitmask.h  fastlog_cycles.c  fastlog_cycles.h  fastlog_list.h  fastlog_parse.c  fastlog_rb.h  fastlog_staging_buffer.c  fastlog_utils.c
test/: CMakeLists.txt  benchmark.c  common.c  common.h  modules.c  test-0.c
test/module1/: init.c  module1.h  task.c
test/module2/: init.c  module2.h  task.c
test/module3/: init.c  module3.h  task.c
